--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "e-commerce-app-be",
-  "type": "module",
   "version": "1.0.0",
   "description": "This is an E-commerce back-end,technologies used are MongoDB,Nodejs and Express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon ./src/app.js",
+    "dev": "better-npm-run dev"
+  },
+  "betterScripts": {
+    "dev": {
+      "command": "nodemon  --exec npx babel-node ./src/app.js",
+      "env": {
+        "NODE_ENV": "development",
+        "PORT": 3000
+      }
+    }
   },
   "repository": {
     "type": "git",
@@ -25,6 +34,7 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.0",
+    "better-npm-run": "^0.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
