--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.0",
     "better-npm-run": "^0.1.1",
+    "crypto-js": "^4.1.1",
+    "cryptojs": "^2.5.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
